Fix navigation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -82,4 +82,9 @@ article p ul {
   h3 {
     font-size: 18px;
   }
+
+  .article .swiper {
+    --swiper-navigation-size: 0;
+    --swiper-navigation-sides-offset: -10px;
+  }
 }
